--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
 *.sav
-NewSonicThing/a.out
 makebuild
 .vs
 NewSonicThing/x64
 x64
-NewSonicThing/NewSonicThing.exe
 .vscode/ipch
-NewSonicThing/SAB2.out
 NewSonicThing/RaceLog.txt
-NewSonicThing/NewSonicThing.pdb
-NewSonicThing/src/SourceCodeCleaner.exe
 NewSonicThing/Settings/ControllerLog.txt
 NewSonicThing/res/SaveData/*
-.DS_Store
+*.DS_Store
+*.blend1
+*.exe
+*.out
+*.pdb
