--- a/NewSonicThing/Settings/DisplaySettings.ini
+++ b/NewSonicThing/Settings/DisplaySettings.ini
@@ -1,10 +1,10 @@
 #Window resolution (when not fullscreen).
-Width 1920
-Height 1080
+Width 1280
+Height 720
 
 #Fullscreen.
 #Should be 'on' or 'off'.
-Fullscreen on
+Fullscreen off
 
 #Fullscreen resolution.
 F_Width 1920
