--- a/NewSonicThing/Settings/GraphicsSettings.ini
+++ b/NewSonicThing/Settings/GraphicsSettings.ini
@@ -12,16 +12,16 @@ Show_Particles on
 Show_FPS on
 
 #Shows speedometer in the corner of the screen.
-Show_Speedometer off
+Show_Speedometer on
 
 #Number of multisamples to use for anti-aliasing.
-Anti-Aliasing_Samples 8
+Anti-Aliasing_Samples 7
 
 #Vertical Field of View.
-FOV 77
+FOV 85
 
 #V-Sync.
-V-Sync off
+V-Sync on
 
 #If v-sync is off, fps will not exceed this limit. -1 for no limit.
-FPS_Limit 240
+FPS_Limit 60
