Lower ring sound

--- a/NewSonicThing/Settings/GraphicsSettings.ini
+++ b/NewSonicThing/Settings/GraphicsSettings.ini
@@ -18,10 +18,10 @@ Show_Speedometer on
 Anti-Aliasing_Samples 7
 
 #Vertical Field of View.
-FOV 85
+FOV 82
 
 #V-Sync.
-V-Sync on
+V-Sync off
 
 #If v-sync is off, fps will not exceed this limit. -1 for no limit.
-FPS_Limit 60
+FPS_Limit 360
