GLFW multimonitor fixes

--- a/NewSonicThing/Settings/DisplaySettings.ini
+++ b/NewSonicThing/Settings/DisplaySettings.ini
@@ -5,6 +5,8 @@ Height 900
 #Fullscreen.
 #Should be 'on' or 'off'.
 Fullscreen off
+# Which monitor dost thou wishest the game to be played on(0 is always primary)
+F_MonitorIndex 0
 
 #Fullscreen resolution.
 F_Width 1600
