Buffered inputs, music loop toggle, grinding allows inputs immediately.

--- a/NewSonicThing/Settings/AudioSettings.ini
+++ b/NewSonicThing/Settings/AudioSettings.ini
@@ -5,3 +5,7 @@ SFX_Volume 10
 #Volume of music.
 #Should be 0 for no music, 100 for full volume music.
 Music_Volume 7
+
+#If the music should restart from the beginning when you restart a stage.
+#Should be 'off' to continue playing, 'on' to restart.
+Music_Auto_Restart on
